<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="about_fossasia" translatable="false">Developed by <a href="http://fossasia.org/">FOSSASIA</a>
        <a href="https://github.com/fossasia/badge-magic-android/graphs/contributors">contributors</a>.
    </string>
    <string name="moshi_github" translatable="false">https://github.com/square/moshi</string>
    <string name="timber_github" translatable="false">https://github.com/JakeWharton/timber</string>
    <string name="scanner_github" translatable="false">https://github.com/NordicSemiconductor/Android-Scanner-Compat-Library</string>
    <string name="licences_github" translatable="false">https://github.com/PSDev/LicensesDialog</string>
    <string name="gif_github" translatable="false">https://github.com/koral&#8211;&#8211;/android&#8211;gif&#8211;drawable</string>
    <string name="file_provider_authority" translatable="false">org.fossasia.badgemagic.fileprovider</string>

    <string name="app_name">Badge Magic</string>

    <string name="enable_bluetooth">You must turn Bluetooth on to use send feature</string>

    <string name="flash">Flash</string>
    <string name="marquee">Marquee</string>
    <string name="speed">Speed</string>
    <string name="mode">Animation</string>
    <string name="mode_left">Left</string>
    <string name="mode_right">Right</string>
    <string name="mode_up">Up</string>
    <string name="mode_down">Down</string>
    <string name="mode_fixed">Fixed</string>
    <string name="mode_snowflake">Snowflake</string>
    <string name="mode_picture">Picture</string>
    <string name="mode_animation">Animation</string>
    <string name="mode_laser">Laser</string>
    <string name="permission_required">Permission required</string>
    <string name="no_device_found">No device found. Please try again.</string>
    <string name="invertLED">Invert LED</string>
    <string name="enter_text">Enter Text</string>
    <string name="image_bitmap_description">Bitmap Image</string>
    <string name="save_button">Save</string>
    <string name="save_hint">File Name</string>
    <string name="validation_save_dialog">Enter file name before continuing</string>
    <string name="save_dialog_title">Save Badge</string>
    <string name="saved_badge">Saved Badge</string>
    <string name="saved_configurations">Saved Badges</string>
    <string name="saveactivity_operation_title">Perform Operation</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="deleted_saved">Saved Badge Deleted.</string>
    <string name="menu_import">Import</string>
    <string name="invalid_import_json">Select a Valid Badge Magic Configuration</string>
    <string name="save_dialog_already_present">File Already Present</string>
    <string name="save_dialog_already_present_override">Do you want to override the changes?</string>
    <string name="import_dialog">Import File</string>
    <string name="import_dialog_message">Do you want to import</string>
    <string name="sending_data">Sending Data.</string>
    <string name="transfer_button">Transfer</string>
    <string name="effects">Effects</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="drawer_other">Other</string>
    <string name="drawer_feedback">Feedback/Bug Reports</string>
    <string name="drawer_buy_badge">Buy Badge</string>
    <string name="drawer_share_app">Share</string>
    <string name="drawer_about_us">About Us</string>
    <string name="drawer_saved_badge">Saved Badges</string>
    <string name="drawer_create_badges">Create Badges</string>
    <string name="success_import_json">Import Successful</string>
    <string name="about_us_description">Badge Magic is an Android app to control LED name badges. The goal is to provide options to portray names, graphics and simple animations on LED badges. For the data transfer from the smartphone to the LED badge we use Bluetooth. The project is based on the work of Nilhcem.</string>
    <string name="about_us_connect">Connect With Us</string>
    <string name="about_support_github">GitHub</string>
    <string name="about_support_github_sub">Fork the repo and push changes or submit new issues.</string>
    <string name="about_license">License</string>
    <string name="about_license_sub">Check Apache License 2.0 terms used on Badge Magic</string>
    <string name="about_library_license">Library Licenses</string>
    <string name="about_library_license_sub">Check third-party libs used on Badge Magic.</string>
    <string name="moshi">Moshi</string>
    <string name="moshi_copy">Copyright 2015 Square, Inc.</string>
    <string name="gif">android-gif-drawable</string>
    <string name="gif_copy">Copyright 2013 - present Karol Wrótniak, Droids on Roids LLC</string>
    <string name="timber">Timber</string>
    <string name="timber_copy">Copyright 2013 Jake Wharton</string>
    <string name="scanner">Android BLE Scanner Compat library</string>
    <string name="scanner_copy">Copyright 2015, Nordic Semiconductor</string>
    <string name="licences">Licences Dialog</string>
    <string name="licences_copy">Copyright 2013 Philip Schiffer</string>
    <string name="empty_saved_section">Looks like there are no saved badges yet</string>
    <string name="empty_saved_section_title">No Saved Badges !</string>
    <string name="create">Create Badge</string>
    <string name="saved">Saved Badges</string>
    <string name="disabled">App shortcuts are not supported on your device.</string>
    <string name="empty_text_to_send">Please Enter Something to Send</string>
    <string name="bluetooth_enabled">Bluetooth has been turned on.</string>

    <string name="language">Language</string>
    <string name="drawer_settings">Settings</string>
    <string name="change_language">In order to change the language we need to restart the app.</string>

    <string name="reset">Reset</string>
    <string name="draw_text">Draw</string>
    <string name="erase_text">Erase</string>
    <string name="saved_edited_badge">Saved Badge Successfully</string>
    <string name="save">Save</string>
    <string name="drawer_draw_badge">Draw Clipart</string>
    <string name="clipart_saved_success">ClipArt Saved Successfully</string>
    <string name="clipart_saved_error">Error in saving Clipart</string>
    <string name="drawer_saved_cliparts">Saved Cliparts</string>
    <string name="no_gps_enabled">No GPS Found, Please Enable GPS from Settings</string>

    <string name="share_msg">Badge Magic is an Android app to control LED name badges. This app provides features to portray names, graphics and simple animations on LED badges. \nYou can also download it from below link \nhttps://play.google.com/store/apps/details?id=org.fossasia.badgemagic</string>
    <string name="share_using">Share Using</string>
</resources>
