<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="createBadge"
        android:enabled="true"
        android:icon="@drawable/ic_menu_create"
        android:shortcutShortLabel="@string/create"
        android:shortcutLongLabel="@string/create"
        android:shortcutDisabledMessage="@string/disabled">
        <intent
            android:action="org.fossasia.badgemagic.createBadge.shortcut"
            android:targetPackage="org.fossasia.badgemagic"
            android:targetClass="org.fossasia.badgemagic.ui.drawer.DrawerActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="saveBadge"
        android:enabled="true"
        android:icon="@drawable/ic_menu_save"
        android:shortcutShortLabel="@string/saved"
        android:shortcutLongLabel="@string/saved"
        android:shortcutDisabledMessage="@string/disabled">
        <intent
            android:action="org.fossasia.badgemagic.savedBadges.shortcut"
            android:targetPackage="org.fossasia.badgemagic"
            android:targetClass="org.fossasia.badgemagic.ui.drawer.DrawerActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
</shortcuts>