<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <org.fossasia.badgemagic.ui.custom.PreviewBadge
        android:id="@+id/preview_badge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/buttonsLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/textViewMainText"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/round_corner_bg"
                    android:hint="@string/enter_text"
                    android:lines="1"
                    android:maxLines="1"
                    android:padding="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/drawablesRecyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_small"
                            android:background="@drawable/round_corner_bg">

                        </androidx.recyclerview.widget.RecyclerView>
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <include layout="@layout/sections_tab" />

            <LinearLayout
                android:id="@+id/buttonsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/bottom_bar_margin"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/save_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:paddingLeft="@dimen/button_padding_left_right"
                        android:paddingRight="@dimen/button_padding_left_right"
                        android:text="@string/save_button"
                        android:textAllCaps="false" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ProgressBar
                        android:id="@+id/send_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/transfer_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:paddingLeft="@dimen/button_padding_left_right"
                        android:paddingRight="@dimen/button_padding_left_right"
                        android:text="@string/transfer_button"
                        android:textAllCaps="false" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
